--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.btn.btn-primary {
+  background-color: #f39d19;
+  border: 1px solid #f39d19;
+  color: white;
+  cursor: pointer;
+}
+
+.btn.btn-primary:hover {
+  background-color: #DD371D;
+}
+
+.btn.btn-primary.disabled {
+  pointer-events: none;
+  opacity: 0.6;
+}
