--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="footer">
-  <p>AA Soluções Digitais</p>
+  <p>Desenvolvido por AA Soluções Digitais - 2024</p>
   <!-- Adicione mais informações da empresa aqui -->
 </div>
