--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="logo">
-    <img src="../img/A&A.jpg" alt="Logo da AA Soluções Digitais">
-  </div>
-  <div class="search">
-    <input type="search" placeholder="Buscar...">
+    <img src="/assets/img/A&A.jpg" alt="Logo da AA Soluções Digitais">
   </div>
 </header>
+
+
+
