--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,10 @@
 .footer {
-  background-color: #CBCAC8;
-  color: rgb(5, 5, 5);
-  padding: 10px;
+  box-sizing: border-box;
+  color: #f1f0ee;
+  background-color: #f39d19;
   text-align: center;
   width: 100%;
   position: fixed;
   bottom: 0;
+  margin-top: 10px;
 }
