--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,11 @@
 form {
   max-width: 100%;
+  max-height: 100vh;
   margin: 0 auto;
+  overflow-y: auto;
+
 }
+
 
 .form-group {
   margin-bottom: 15px;
@@ -14,6 +18,7 @@ label {
 
 input[type="email"],
 input[type="password"],
+input[type="text"],
 button {
   box-sizing: border-box;
   width: 100%;
@@ -44,4 +49,44 @@ input.ng-invalid.ng-touched {
 
 .form-group a {
   margin: 5px 0;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.input-group {
+  position: relative;
+  display: flex;
+}
+
+.btn-view-password {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+.btn-view-password .btn {
+  background: none;
+  border: none;
+  pointer-events: auto;
+}
+.btn-view-password img {
+  width: 20px; /* Ajuste este valor para o tamanho desejado */
+  height: auto;
+  align-content: center;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.logo-container img {
+  width: 350px; /* Ajuste este valor para o tamanho desejado */
+  height: auto;
 }
