criação do forgot password

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -44,7 +44,7 @@
       <a routerLink="/register">Não tem uma conta Cadastrar-se</a>
     </div>
     <div class="form-group">
-      <a routerLink="/forgot-password">Esqueci minha senha</a>
+      <a routerLink="/forgot-password">Esqueceu a senha?</a>
     </div>
   </div>
 </form>
