--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,10 @@
   pointer-events: none;
   opacity: 0.6;
 }
+
+.btn.btn-secondary {
+  background-color: #A1AEB1;
+  border: 1px solid #A1AEB1;
+  color: white;
+  cursor: pointer;
+}
