--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,6 @@
 <div class="footer">
+  <div class=textofooter>
   <p>Desenvolvido por AA Soluções Digitais - 2024</p>
+</div>
   <!-- Adicione mais informações da empresa aqui -->
 </div>
