--- a/src/app/forgot-password/forgot-password.component.css
+++ b/src/app/forgot-password/forgot-password.component.css
@@ -34,9 +34,9 @@ button {
 
 }
 
-input[type="email"]
- {
+input[type="email"] {
   border: 1px solid #ddd;
+  width: 300px; /* Ajuste este valor para o tamanho desejado */
 }
 
 
@@ -67,38 +67,6 @@ input.ng-invalid.ng-touched {
   position: relative;
   display: flex;
 }
-
-.btn-view-password {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  pointer-events: none;
-}
-
-.btn-view-password .btn {
-  background: none;
-  border: none;
-  pointer-events: auto;
-}
-.btn-view-password img {
-  width: 20px; /* Ajuste este valor para o tamanho desejado */
-  height: auto;
-  align-content: center;
-}
-
-.logo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.logo-container img {
-  width: 350px; /* Ajuste este valor para o tamanho desejado */
-  height: auto;
-}
-
 
 .button-container {
   display: flex;
