--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,30 @@
+app-header {
+  width: 100%;
+  height: 10%;
+}
 
+app-footer {
+  width: 100%;
+  height: 10%;
+}
 
 main {
   display: flex;
-  justify-content: center;
-  align-items: center;
   height: calc(100vh - 10px - 10px);
-  width: 100%;
+  width: 80%; /* Ajuste a largura aqui */
   background-color: #F1F0EE;
+  margin-left: 20%;
+  justify-content: center;
+  align-items: center;/* A cor de fundo desejada *//* Adicione margem à esquerda para acomodar o menu lateral */
+}
 
+
+
+main.login-page {
+  height: 100vh;
+  width: 100%;
+  margin-left: 0;
+  background-color: #F1F0EE;
+  justify-content: center;
+  align-items: center;/* A cor de fundo desejada */
 }
