--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,5 +6,12 @@
   width: 100%;
   position: fixed;
   bottom: 0;
-  margin-top: 10px;
+  height: 10%
+}
+
+.textofooter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
