--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="logo">
-    <img src="/assets/img/A&A.jpg" alt="Logo da AA Soluções Digitais">
+    <!-- <img src="/assets/img/A&A.jpg" alt="Logo da AA Soluções Digitais"> -->
   </div>
 </header>
 
