--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,16 +1,18 @@
 <app-side-menu></app-side-menu>
 
 <!-- Campo de pesquisa -->
-<div class="botao-container">
-  <button class="btn btn-primary">
-    <i class="fa fa-search" style="margin-right: 5px; display: inline-block;"></i>
-    <span style="display: inline-block;">Pesquisar</span>
+
+
+<!-- Campo de pesquisa -->
+<div class="d-flex justify-content-center">
+  <button class="btn btn-primary mr-2">
+    <i class="fa fa-search mr-2"></i>
+    Pesquisar
   </button>
   <button class="btn btn-primary" (click)="openDialog()">
-    <i class="fa fa-plus" style="margin-right: 5px; display: inline-block;"></i>
-    <span style="display: inline-block;">Cadastrar</span>
+    <i class="fa fa-plus mr-2"></i>
+    Cadastrar
   </button>
 </div>
-
 
 
