--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -7,7 +7,7 @@
       <a routerLink="/cadastros"><i class="fas fa-user"></i> Cadastros</a>
       <a class="dropdown-toggle" role="button" (click)="toggleDropdown($event)"><span class="caret"></span></a>
       <ul class="dropdown-menu" [class.show]="dropdownOpen">
-        <li><a routerLink="">Clientes</a></li>
+        <li><a routerLink="/clientes">Clientes</a></li>
         <li><a routerLink="">Equipamentos</a></li>
         <li><a routerLink="">Produtos</a></li>
         <li><a routerLink="">Peças</a></li>
