--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,9 +4,7 @@
   background-color: #f39d19;
   text-align: center;
   width: 100%;
-  position: fixed;
-  bottom: 0;
-  height: 10%
+  height: 10%;
 }
 
 .textofooter {
