--- a/src/app/cadastro-component/cadastro-component.component.html
+++ b/src/app/cadastro-component/cadastro-component.component.html
@@ -1,5 +1,8 @@
 <app-side-menu></app-side-menu>
 
+
+<h1 class="text-center mt-5">Cadastro de Cliente</h1>
+
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="container mt-5">
   <div class="form-group">
     <div class="form-check form-check-inline">
@@ -24,12 +27,15 @@
 
   <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Física'">
     <label for="cpf">CPF</label>
-    <input type="text" id="cpf" class="form-control" formControlName="cpf" placeholder="CPF">
+    <input type="text" id="cpf" class="form-control" formControlName="cpf" placeholder="CPF" [mask]="maskService.cpf">
+    <div *ngIf="form.get('cpf')?.invalid && form.get('cpf')?.touched" class="alert alert-danger">
+      Campo CPF é obrigatório
+    </div>
   </div>
 
   <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Jurídica'">
     <label for="cnpj">CNPJ</label>
-    <input type="text" id="cnpj" class="form-control" formControlName="cnpj" placeholder="CNPJ" (blur)="buscarDadosCNPJ()">
+    <input type="text" id="cnpj" class="form-control" formControlName="cnpj" placeholder="CNPJ" (blur)="buscarDadosCNPJ()" [mask]="maskService.cnpj">
     <div *ngIf="form.get('cnpj')?.invalid && form.get('cnpj')?.touched" class="alert alert-danger">
       Campo CNPJ é obrigatório
     </div>
@@ -42,25 +48,53 @@
 
   <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Jurídica'">
     <label for="nomeFantasia">Nome Fantasia</label>
-    <input type="text" id="nomeFantasia" class="form-control" formControlName="nomeFantasia" placeholder="Nome Fantasia" readonly>
+    <input type="text" id="nomeFantasia" class="form-control" formControlName="nomeFantasia" placeholder="Nome Fantasia">
   </div>
 
   <div class="form-group">
-    <label for="telefone">Telefone</label>
-    <input type="text" id="telefone" class="form-control" formControlName="telefone" placeholder="Telefone">
+    <label for="telefone">Telefone Celular</label>
+    <input type="text" id="telefoneCelular" class="form-control" formControlName="telefoneCelular" placeholder="Telefone Celular" [mask]="maskService.celular" prefix="+55 ">
   </div>
 
-  <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Jurídica'">
+  <div class="form-group">
+    <label for="telefone">Telefone Fixo</label>
+    <input type="text" id="telefone" class="form-control" formControlName="telefone" placeholder="Telefone Fixo" [mask]="maskService.telefone" prefix="+55 ">
+  </div>
+
+  <div class="form-group">
     <label for="cep">CEP</label>
-    <input type="text" id="cep" class="form-control" formControlName="cepj" placeholder="CEP" readonly>
+    <input type="text" id="cep" class="form-control" formControlName="cep" placeholder="CEP" [mask]="maskService.cep" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null" (blur)=" buscarDadosCep()">
   </div>
 
-  <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Física'">
-    <label for="cep">CEP</label>
-    <input type="text" id="cep" class="form-control" formControlName="cepF" placeholder="CEP">
+  <div class="form-group">
+    <label for="logradouro">Logradouro</label>
+    <input type="text" id="logradouro" class="form-control" formControlName="logradouro" placeholder="Logradouro" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null">
   </div>
 
+  <div class="form-group">
+    <label for="numero">Número</label>
+    <input type="text" id="numero" class="form-control" formControlName="numero" placeholder="Número" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null">
+  </div>
 
+  <div class="form-group">
+    <label for="bairro">Bairro</label>
+    <input type="text" id="logradouro" class="form-control" formControlName="bairro" placeholder="Bairro" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null">
+  </div>
+
+  <div class="form-group">
+    <label for="estado">Estado</label>
+    <input type="text" id="logradouro" class="form-control" formControlName="estado" placeholder="Estado" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null">
+  </div>
+
+  <div class="form-group">
+    <label for="cidade">Cidade</label>
+    <input type="text" id="logradouro" class="form-control" formControlName="cidade" placeholder="Cidade" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null">
+  </div>
+
+  <div class="form-group">
+    <label for="complemento">Complemento</label>
+    <input type="text" id="complemento" class="form-control" formControlName="complemento" placeholder="Complemento">
+  </div>
 
 
 
@@ -71,6 +105,4 @@
     <button type="button" class="btn btn-secondary" (click)="onBack()">Voltar</button>
   </div>
 </form>
-
-
 
