--- a/src/app/cadastro-component/cadastro-component.component.html
+++ b/src/app/cadastro-component/cadastro-component.component.html
@@ -27,10 +27,11 @@
 
   <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Física'">
     <label for="cpf">CPF</label>
-    <input type="text" id="cpf" class="form-control" formControlName="cpf" placeholder="CPF" [mask]="maskService.cpf">
+    <input type="text" id="cpf" class="form-control" formControlName="cpf" placeholder="CPF" [mask]="maskService.cpf" (blur)="validaCpf()">
     <div *ngIf="form.get('cpf')?.invalid && form.get('cpf')?.touched" class="alert alert-danger">
       Campo CPF é obrigatório
     </div>
+    <div *ngIf="cpfInvalido" class="alert alert-danger">CPF Inválido! Por favor, digite um CPF válido.</div>
   </div>
 
   <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Jurídica'">
@@ -48,22 +49,31 @@
 
   <div class="form-group" *ngIf="form.get('tipo')?.value === 'Pessoa Jurídica'">
     <label for="nomeFantasia">Nome Fantasia</label>
-    <input type="text" id="nomeFantasia" class="form-control" formControlName="nomeFantasia" placeholder="Nome Fantasia">
+    <input type="text" id="nomeFantasia" class="form-control" formControlName="nomeFantasia" placeholder="Nome Fantasia" required>
+
   </div>
 
   <div class="form-group">
+    <label for="email">E-mail</label>
+    <input type="text" id="email" class="form-control" formControlName="email" placeholder="E-mail">
+    <div *ngIf="emailInvalido" class="alert alert-danger">E-mail Inválido! Por favor, digite um e-mail válido.</div>
+    <div *ngif="form.get('email')?.ivalid && form.get('email')?.touched" class="alert alert-danger">Campo e-mail é obrigatório.</div>
+  </div>
+
+
+  <div class="form-group">
     <label for="telefone">Telefone Celular</label>
-    <input type="text" id="telefoneCelular" class="form-control" formControlName="telefoneCelular" placeholder="Telefone Celular" [mask]="maskService.celular" prefix="+55 ">
+    <input type="text" id="telefoneCelular" class="form-control" formControlName="telefoneCelular" placeholder="Telefone Celular" required [mask]="maskService.celular" prefix="+55 ">
   </div>
 
   <div class="form-group">
     <label for="telefone">Telefone Fixo</label>
     <input type="text" id="telefone" class="form-control" formControlName="telefone" placeholder="Telefone Fixo" [mask]="maskService.telefone" prefix="+55 ">
   </div>
-
   <div class="form-group">
     <label for="cep">CEP</label>
     <input type="text" id="cep" class="form-control" formControlName="cep" placeholder="CEP" [mask]="maskService.cep" [attr.readonly]="form.get('tipo')?.value === 'Pessoa Juridica' ? true : null" (blur)=" buscarDadosCep()">
+    <div *ngIf="cepInvalido" class="alert alert-danger">CEP Inválido! Por favor, digite um CEP válido.</div>
   </div>
 
   <div class="form-group">
